# believe

./: README.md  index.md
lookOutside/: CMakeLists.txt  main.cpp  mainwindow.ui  resources.qrc  weatherapi.cpp  weatherapi.h  weatherdatafetcher.cpp  weatherdatafetcher.h  weatherwidget.cpp  weatherwidget.h  weatherwidget.ui
